--- a/static/configuration.json
+++ b/static/configuration.json
@@ -1,7 +1,7 @@
 { 
 "githubUsername": "123zsc123", 
-"blogTitle": "123zsc123", 
-"blogDescribe": "欢迎来到张世超的个人博客。", 
+"blogTitle": "欢迎光临", 
+"blogDescribe": "欢迎来到张世超的个人博客", 
 "htmlTitle": "张世超的博客", 
 "fontColor": "#ffffff", 
 "useBackgroundImage": false, 
